prepare for submission

--- a/manual/report.html
+++ b/manual/report.html
@@ -121,9 +121,9 @@
                     <strong>Implementation of Code</strong>
                   </td>
 
-                  <td>33.33%</td>
-                  <td>33.33%</td>
-                  <td>33.33%</td>
+                  <td>35.00%</td>
+                  <td>35.00%</td>
+                  <td>30.00%</td>
                 </tr>
               </tbody>
             </table>
@@ -137,10 +137,10 @@
               We took a group approach for the research required for this
               project. This involved meeting up as a group every Tuesday at the
               library. During these meetings, we discussed the goals of the
-              project, the language to use, and how to implement each part of the
-              interpreter (scanner, parser, and the interpreter. We popcorn read
-              the Crafting Interpreters textbook in order to learn about the
-              general grammar of languages (This is an agile team building
+              project, the language to use, and how to implement each part of
+              the interpreter (scanner, parser, and the interpreter. We popcorn
+              read the Crafting Interpreters textbook in order to learn about
+              the general grammar of languages (this is an agile team building
               exercise). This was a great opportunity to get to learn about
               interpreter concepts together as a group and stay on the same
               page. After we learned about the general grammar of languages
@@ -155,29 +155,31 @@
             <p>
               Since this project has many parts that must work together, we had
               to make some selective design choices. Due to all group members'
-              familiarity with python, that is the language we selected. We decided  
-              to use python's built-in operator library to implement the operators 
-              and define our own functions as needed. We whiteboarded different 
-              ideas for the implementation of the code and discussed as a group 
-              our plans for implementation of certain functionalities such as 
-              operators, types (number?, symbol?, list?, null?), replacing true and 
-              false with T and (), printing, and other built in names such as if, 
-              while, set, begin, cons, car, cdr, and how to implement function 
-              definition and calling.
+              familiarity with python, that is the language we selected. We
+              decided to use python's built-in operator library to implement the
+              operators and define our own functions as needed. We whiteboarded
+              different ideas for the implementation of the code and discussed
+              as a group our plans for implementation of certain functionalities
+              such as operators, types (number?, symbol?, list?, null?),
+              replacing true and false with T and (), printing, and other built
+              in names such as if, while, set, begin, cons, car, cdr, and how to
+              implement function definition and calling.
             </p>
             <h4>Implementation of Code</h4>
             <p>
-              To implement this code, we met as a group many times until the project 
-              was complete. One group member would broadcast their screen onto a TV in 
-              a group study room in Gorgas and the others would discuss specifically how 
-              to implement the design we came up with in the beginning stages of devolopment. 
-              We changed which member would be broadcasting their screen and which members 
-              would be verbally describing how to implement the design. We worked 
-              collaboratively and efficiently to implement this program as a group using 
-              a style of trio programming that has been common throughout internships. This 
-              style of implementation worked well for us as we were able to communicate 
-              efficiently and clearly with each other throughout the process so our 
-              design could come to life.
+              To implement this code, we met as a group many times until the
+              project was complete. One group member would broadcast their
+              screen onto a TV in a group study room in Gorgas and the others
+              would discuss specifically how to implement the design we came up
+              with in the beginning stages of devolopment. We changed which
+              member would be broadcasting their screen and which members would
+              be verbally describing how to implement the design. We worked
+              collaboratively and efficiently to implement this program as a
+              group using a style of trio programming that has been common
+              throughout internships. This style of implementation worked well
+              for us as we were able to communicate efficiently and clearly with
+              each other throughout the process so our design could come to
+              life.
             </p>
           </div>
           <p></p>
@@ -205,7 +207,7 @@
                     >
                   </td>
                   <!-- UPDATE TIME TRACKING HERE -->
-                  <td>3 hours</td>
+                  <td>4 hours</td>
                 </tr>
                 <tr>
                   <td>Madeline Moore</td>
@@ -216,7 +218,7 @@
                     >
                   </td>
                   <!-- UPDATE TIME TRACKING HERE -->
-                  <td>3 hours</td>
+                  <td>4 hours</td>
                 </tr>
                 <tr>
                   <td>Peter Zhang</td>
@@ -273,9 +275,9 @@
                     <strong>Test Cases</strong>
                   </td>
 
-                  <td>33.33%</td>
-                  <td>33.33%</td>
-                  <td>33.33%</td>
+                  <td>40.00%</td>
+                  <td>40.00%</td>
+                  <td>20.00%</td>
                 </tr>
               </tbody>
             </table>
@@ -306,19 +308,19 @@
             <h4>Testing Script</h4>
             <p>
               We used a bash script to help automate our tests. The bash script
-              is named "tester.sh" and is located in the main directory. It is
-              hardcoded to specifically work with our project directory. We
+              is named "tester.sh" and it is located in the main directory. It
+              is hardcoded to specifically work with our project directory. We
               updated a 1994 C++ version of Kamin's Lisp Interpreter to work
               with a modern day C++ compiler. The testing script ask to run
-              either a specified single test case or all of the test cases. The
-              tester will then run the test case(s) on the C++ Kamin Interpreter
-              and our own interpreter and compare the outputs. If they resulting
-              outputs are the same then the test passes.
+              either a specified single test case or all of the test cases. It
+              will then compile Kamin's Lisp Interpreter. Then the tester will
+              then run the test case(s) on the C++ Kamin Interpreter and our own
+              interpreter and compare the outputs. If the resulting outputs are
+              the same then the test passes.
             </p>
           </div>
 
           <div class="section">
-            <!-- !Convert to picture form before turning in -->
             <h4>Test Cases</h4>
             <p style="margin-bottom: 0">Choose the test case to view:</p>
             <ul style="margin-top: 0">
@@ -416,16 +418,174 @@
                   Test Case 18
                 </a>
               </li>
+              <li>
+                <a href="javascript:setTestCase(19)" test-case="case-19">
+                  Test Case 19
+                </a>
+              </li>
+              <li>
+                <a href="javascript:setTestCase(20)" test-case="case-20">
+                  Test Case 20
+                </a>
+              </li>
+              <li>
+                <a href="javascript:setTestCase(21)" test-case="case-21">
+                  Test Case 21
+                </a>
+              </li>
+              <li>
+                <a href="javascript:setTestCase(22)" test-case="case-22">
+                  Test Case 22
+                </a>
+              </li>
+              <li>
+                <a href="javascript:setTestCase(23)" test-case="case-23">
+                  Test Case 23
+                </a>
+              </li>
+              <li>
+                <a href="javascript:setTestCase(24)" test-case="case-24">
+                  Test Case 24
+                </a>
+              </li>
+              <li>
+                <a href="javascript:setTestCase(25)" test-case="case-25">
+                  Test Case 25
+                </a>
+              </li>
             </ul>
-            <div class="center" id="part3-sequence-diagram-img-container">
-              <div class="side-by-side">
+            <div class="center" id="part3-test-case-img-container">
+              <img id="test-case-1" src="/manual/pictures/case-1.png" />
+              <img
+                class="hide"
+                id="test-case-2"
+                src="/manual/pictures/case-2.png"
+              />
+              <img
+                class="hide"
+                id="test-case-3"
+                src="/manual/pictures/case-3.png"
+              />
+              <img
+                class="hide"
+                id="test-case-4"
+                src="/manual/pictures/case-4.png"
+              />
+              <img
+                class="hide"
+                id="test-case-5"
+                src="/manual/pictures/case-5.png"
+              />
+              <img
+                class="hide"
+                id="test-case-6"
+                src="/manual/pictures/case-6.png"
+              />
+              <img
+                class="hide"
+                id="test-case-7"
+                src="/manual/pictures/case-7.png"
+              />
+              <img
+                class="hide"
+                id="test-case-8"
+                src="/manual/pictures/case-8.png"
+              />
+              <img
+                class="hide"
+                id="test-case-9"
+                src="/manual/pictures/case-9.png"
+              />
+              <img
+                class="hide"
+                id="test-case-10"
+                src="/manual/pictures/case-10.png"
+              />
+              <img
+                class="hide"
+                id="test-case-11"
+                src="/manual/pictures/case-11.png"
+              />
+              <img
+                class="hide"
+                id="test-case-12"
+                src="/manual/pictures/case-12.png"
+              />
+              <img
+                class="hide"
+                id="test-case-13"
+                src="/manual/pictures/case-13.png"
+              />
+              <img
+                class="hide"
+                id="test-case-14"
+                src="/manual/pictures/case-14.png"
+              />
+              <img
+                class="hide"
+                id="test-case-15"
+                src="/manual/pictures/case-15.png"
+              />
+              <img
+                class="hide"
+                id="test-case-16"
+                src="/manual/pictures/case-16.png"
+              />
+              <img
+                class="hide"
+                id="test-case-17"
+                src="/manual/pictures/case-17.png"
+              />
+              <img
+                class="hide"
+                id="test-case-18"
+                src="/manual/pictures/case-18.png"
+              />
+              <img
+                class="hide"
+                id="test-case-19"
+                src="/manual/pictures/case-19.png"
+              />
+              <img
+                class="hide"
+                id="test-case-20"
+                src="/manual/pictures/case-20.png"
+              />
+              <img
+                class="hide"
+                id="test-case-21"
+                src="/manual/pictures/case-21.png"
+              />
+              <img
+                class="hide"
+                id="test-case-22"
+                src="/manual/pictures/case-22.png"
+              />
+              <img
+                class="hide"
+                id="test-case-23"
+                src="/manual/pictures/case-23.png"
+              />
+              <img
+                class="hide"
+                id="test-case-24"
+                src="/manual/pictures/case-24.png"
+              />
+              <img
+                class="hide"
+                id="test-case-25"
+                src="/manual/pictures/case-25.png"
+              />
+
+              <!-- For loading test cases live on a server.
+                <div class="side-by-side">
                 <strong><p id="test-case-num">Test Case 1 Input:</p></strong>
                 <pre><code id="test-case-display"></code></pre>
               </div>
               <div class="side-by-side">
                 <strong><p id="test-output-num">Test Case Output 1:</p></strong>
                 <pre><code id="test-result-display"></code></pre>
-              </div>
+              </div> -->
             </div>
           </div>
           <p></p>
@@ -453,8 +613,17 @@
                   <li>
                     Bash typically comes with Linux and MacOS. If you are
                     Windows you can install Cywgin in order to run bash scripts.
-                    You can find the setup page
-                    <a href="https://www.python.org/downloads/"> here</a>.
+                    You can find the installation page
+                    <a href="https://www.cygwin.com/install.html"> here</a>.
+                  </li>
+                </ul>
+              </li>
+              <li>
+                C++ - For running the tester
+                <ul>
+                  <li>
+                    MacOS comes with a C++ compiler (Apple Clang). If you are
+                    using Windows or Linux, any C++ compiler should work.
                   </li>
                 </ul>
               </li>
@@ -464,17 +633,17 @@
           <div class="section">
             <h4>Interpreter Modes</h4>
             <p>
-              This project was made using python3. The interpreter itself is like
-              Python3 since it has two modes. It can either interpret Lisp code
-              from the command line or from a file. The file mode uses argv to
-              read in the name of the file to interpret.
+              This project was made using python3. The interpreter itself is
+              like Python3 since it has two modes. It can either interpret Lisp
+              code from the command line or from a file. The file mode uses argv
+              to read in the name of the file to interpret.
             </p>
           </div>
           <div class="section">
             <h4>Interpreting code from the command line</h4>
             <p style="margin-bottom: 0">
               To run the interpreter (reading from command line), type the
-              following into the command line:
+              following into the command line while in the main directory:
             </p>
             <code> $ python3 src/project1.py </code>
           </div>
@@ -482,7 +651,7 @@
             <h4>Interpreting code from a file</h4>
             <p style="margin-bottom: 0">
               To run the interpreter (reading a file), type the following into
-              the command line:
+              the command line while in the main directory:
             </p>
             <code> $ python3 src/project1.py LISPFILE.lisp </code>
             <p style="margin-top: 0">
@@ -495,7 +664,7 @@
             <p style="margin-bottom: 0">
               The tester is a bash script that can be run from the command line.
               You can run the tester by typing the following into the command
-              line:
+              line while in the main directory:
             </p>
             <code> $ bash tester.sh </code>
           </div>
@@ -505,7 +674,7 @@
               Once you have ran the tester, it will prompt you for a test case
               to run. You can either type a specific test case number or type
               "ALL" to run all test cases. The tester will run run the case(s)
-              and print the interpreter passed or failed the test case(s).
+              and print if the interpreter passed or failed the test case(s).
             </p>
           </div>
 
@@ -562,6 +731,22 @@
     return rawFile.responseText;
   }
 
+  function setTestCase(num) {
+    const newLi = document.querySelector("[test-case=case-" + num + "]");
+    const oldLi = document.querySelector(".underline[test-case]");
+    newLi.classList.toggle("underline");
+    oldLi.classList.toggle("underline");
+
+    const previousImage = document.querySelector(
+      "#part3-test-case-img-container :not(.hide)"
+    );
+    previousImage.classList.toggle("hide");
+    const nextImage = document.querySelector("#test-case-" + num);
+    nextImage.classList.toggle("hide");
+  }
+
+  /*
+  // The following can be used to load test case results live ONLY if the page is being hosted on a server.
   const testNumDisplay = document.getElementById("test-case-num");
   const testOutputNumDisplay = document.getElementById("test-output-num");
   const testDisplay = document.getElementById("test-case-display");
@@ -585,4 +770,5 @@
       testAnsDisplay.innerHTML = testAnsDisplay.innerHTML.substring(1);
     }
   }
+  */
 </script>
