make images load on yessick's computer

--- a/manual/report.html
+++ b/manual/report.html
@@ -328,7 +328,7 @@
               </p>
             </div>
             <div style="float: right">
-              <img id="test-case-1" src="/manual/pictures/testerresults.png" />
+              <img id="test-case-1" src="./pictures/testerresults.png" />
             </div>
           </div>
 
@@ -467,126 +467,126 @@
               </li>
             </ul>
             <div class="center" id="part3-test-case-img-container">
-              <img id="test-case-1" src="/manual/pictures/case-1.png" />
+              <img id="test-case-1" src="./pictures/case-1.png" />
               <img
                 class="hide"
                 id="test-case-2"
-                src="/manual/pictures/case-2.png"
+                src="./pictures/case-2.png"
               />
               <img
                 class="hide"
                 id="test-case-3"
-                src="/manual/pictures/case-3.png"
+                src="../pictures/case-3.png"
               />
               <img
                 class="hide"
                 id="test-case-4"
-                src="/manual/pictures/case-4.png"
+                src="./pictures/case-4.png"
               />
               <img
                 class="hide"
                 id="test-case-5"
-                src="/manual/pictures/case-5.png"
+                src="./pictures/case-5.png"
               />
               <img
                 class="hide"
                 id="test-case-6"
-                src="/manual/pictures/case-6.png"
+                src="./pictures/case-6.png"
               />
               <img
                 class="hide"
                 id="test-case-7"
-                src="/manual/pictures/case-7.png"
+                src="./pictures/case-7.png"
               />
               <img
                 class="hide"
                 id="test-case-8"
-                src="/manual/pictures/case-8.png"
+                src="./pictures/case-8.png"
               />
               <img
                 class="hide"
                 id="test-case-9"
-                src="/manual/pictures/case-9.png"
+                src="./pictures/case-9.png"
               />
               <img
                 class="hide"
                 id="test-case-10"
-                src="/manual/pictures/case-10.png"
+                src="./pictures/case-10.png"
               />
               <img
                 class="hide"
                 id="test-case-11"
-                src="/manual/pictures/case-11.png"
+                src="./pictures/case-11.png"
               />
               <img
                 class="hide"
                 id="test-case-12"
-                src="/manual/pictures/case-12.png"
+                src="./pictures/case-12.png"
               />
               <img
                 class="hide"
                 id="test-case-13"
-                src="/manual/pictures/case-13.png"
+                src="./pictures/case-13.png"
               />
               <img
                 class="hide"
                 id="test-case-14"
-                src="/manual/pictures/case-14.png"
+                src="./pictures/case-14.png"
               />
               <img
                 class="hide"
                 id="test-case-15"
-                src="/manual/pictures/case-15.png"
+                src="./pictures/case-15.png"
               />
               <img
                 class="hide"
                 id="test-case-16"
-                src="/manual/pictures/case-16.png"
+                src="./pictures/case-16.png"
               />
               <img
                 class="hide"
                 id="test-case-17"
-                src="/manual/pictures/case-17.png"
+                src="./pictures/case-17.png"
               />
               <img
                 class="hide"
                 id="test-case-18"
-                src="/manual/pictures/case-18.png"
+                src="./pictures/case-18.png"
               />
               <img
                 class="hide"
                 id="test-case-19"
-                src="/manual/pictures/case-19.png"
+                src="./pictures/case-19.png"
               />
               <img
                 class="hide"
                 id="test-case-20"
-                src="/manual/pictures/case-20.png"
+                src="./pictures/case-20.png"
               />
               <img
                 class="hide"
                 id="test-case-21"
-                src="/manual/pictures/case-21.png"
+                src="./pictures/case-21.png"
               />
               <img
                 class="hide"
                 id="test-case-22"
-                src="/manual/pictures/case-22.png"
+                src="./pictures/case-22.png"
               />
               <img
                 class="hide"
                 id="test-case-23"
-                src="/manual/pictures/case-23.png"
+                src="./pictures/case-23.png"
               />
               <img
                 class="hide"
                 id="test-case-24"
-                src="/manual/pictures/case-24.png"
+                src="./pictures/case-24.png"
               />
               <img
                 class="hide"
                 id="test-case-25"
-                src="/manual/pictures/case-25.png"
+                src="./pictures/case-25.png"
               />
 
               <!-- For loading test cases live on a server.
