--- a/manual/report.html
+++ b/manual/report.html
@@ -476,7 +476,7 @@
               <img
                 class="hide"
                 id="test-case-3"
-                src="../pictures/case-3.png"
+                src="./pictures/case-3.png"
               />
               <img
                 class="hide"
