add note about cases

--- a/manual/report.html
+++ b/manual/report.html
@@ -334,6 +334,7 @@
 
           <div class="section">
             <h4>Test Cases</h4>
+            <b>Due to some javascript craziness going back to test case 1 breaks everything, if you need to view test case 1 again please refresh the page.</b>
             <p style="margin-bottom: 0">Choose the test case to view:</p>
             <ul style="margin-top: 0">
               <li>
