--- a/manual/report.html
+++ b/manual/report.html
@@ -333,13 +333,15 @@
               </p>
             </div>
             <div style="float: right">
-              <img id="test-case-1" src="./pictures/testerresults.png" />
+                <!-- Thanks Dr. Yessick -->
+              <img id="test-case-all" src="./pictures/testerresults.png" />
             </div>
           </div>
 
           <div class="section">
             <h4>Test Cases</h4>
-            <b>Due to some javascript craziness going back to test case 1 breaks everything, if you need to view test case 1 again please refresh the page.</b>
+            <!-- Thanks Dr. Yessick -->
+            <!-- <b>Due to some javascript craziness going back to test case 1 breaks everything, if you need to view test case 1 again please refresh the page.</b> -->
             <p style="margin-bottom: 0">Choose the test case to view:</p>
             <ul style="margin-top: 0">
               <li>
@@ -758,6 +760,8 @@
     const previousImage = document.querySelector(
       "#part3-test-case-img-container :not(.hide)"
     );
+    // thanks Dr. Yessick
+    if (previousImage != null) { previousImage.classList.toggle("hide"); }
     previousImage.classList.toggle("hide");
     const nextImage = document.querySelector("#test-case-" + num);
     nextImage.classList.toggle("hide");
