--- a/manual/report.html
+++ b/manual/report.html
@@ -762,7 +762,7 @@
     );
     // thanks Dr. Yessick
     if (previousImage != null) { previousImage.classList.toggle("hide"); }
-    previousImage.classList.toggle("hide");
+    // previousImage.classList.toggle("hide");
     const nextImage = document.querySelector("#test-case-" + num);
     nextImage.classList.toggle("hide");
   }
